[package]
name = "nuttx-arm64-emulator"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Emulate Apache NuttX RTOS for Arm64 with Unicorn Emulator (Avaota-A1 SBC)"
homepage = "https://lupyuen.org/articles/unicorn3.html"
repository = "https://github.com/lupyuen/nuttx-arm64-emulator"
readme = "README.md"
keywords = ["nuttx", "rtos", "ci"]
categories = ["command-line-utilities"]

[dependencies]
addr2line = "0.19.0"
gimli = "0.27.2"
once_cell = "1.17.1"
unicorn-engine = "2.1.3"
